# gnawex

./: .build  .editorconfig  .gitignore  404.html  CHANGELOG.md  CNAME  Cargo.toml  GNAWEX.epub  README.md  api-reference.html  available-scripts.html  cabal.project  diesel.toml  docker-compose.yml  feedback.yml  flake.nix  flyway.conf  fourmolu.yaml  fourmolu.yml  gleam.toml  gnawex.cabal  gnawex.conf  gnawex.html  hie.yaml  index.html  mix.exs  mkdocs.yml  roles.html  search.html  setup.html  sitemap.xml  sqitch.conf  sqitch.plan
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml
Specs/Items/: index.html
Specs/Mapping/: index.html
api/: index.html
assets/: app.css  app.ts  package-lock.json  package.json  style.css  tailwind.config.js  var.css
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
deploy/: api__schema.sql  api_schema.sql  api_schema_permissions.sql  app__items.sql  app__listings.sql  app__match_listings.sql  app__schema.sql  app__transactions.sql  app__users.sql  app_schema.sql  app_schema_permissions.sql  auth_schema.sql  auth_schema_permissions.sql  citext.sql  default_privileges.sql  extension__pgtap.sql  items.sql  match_listings.sql  pgcrypto.sql  role_permissions.sql  roles.sql  session_permissions.sql  sessions.sql  transactions.sql  users.sql
docs/: Index.md  Projects.md  README.md  book.toml  flake.nix  index.md  mix.exs  publish.css
gnawex/: Cargo.toml
gnawex/src/: main.rs
gnawex_core/: Cargo.toml
gnawex_core/src/: context.rs  db.rs  error.rs  item.rs  item_grouped_order.rs  item_order.rs  lib.rs  session.rs  user.rs
gnawex_core/src/item/: error.rs
gnawex_core/src/sql/: item_grouped_order.rs  item_order.rs  user.rs
gnawex_db/: Cargo.toml
gnawex_db/src/: config.rs  item.rs  item_order.rs  lib.rs  session.rs  sql.rs
gnawex_db/src/sql/: item.rs  item_grouped_order.rs  item_order.rs  session.rs  user.rs
gnawex_server/: Cargo.toml
gnawex_server/src/: config.rs  handler.rs  lib.rs  middleware.rs
gnawex_server/src/extract/: context.rs
gnawex_server/src/extractor/: context.rs
gnawex_server/src/handler/: error.rs  item_index.rs  item_order_create.rs  item_show.rs  login.rs  session.rs
lib/: gnawex.ex  gnawex_web.ex
migrations/: 2022-02-22-23-43-00_create_listings.sql  20220222233600_create_users.sql  20220222234200_create_items.sql  20220222234300_create_listings.sql  20220228153327_create_match_listing.sql  20220301143724_create_role.sql  README.md  flake.nix  mix.exs
muridae/: .hlint.yaml  cabal.project  fourmolu.yaml  hie.yaml  muridae.cabal
muridae/muridae/: DB.hs  MyLib.hs
muridae/muridae-api/Effectful/: Servant.hs
muridae/muridae-api/Muridae/: Environment.hs
muridae/muridae-api/Muridae/API/: QueryParam.hs  Route.hs  Server.hs  Types.hs
muridae/muridae-api/Muridae/API/Handler/: Item.hs  ItemListing.hs  User.hs
muridae/muridae-api/Muridae/API/Route/: Item.hs  ItemListing.hs  ItemTxn.hs
muridae/muridae-api/Muridae/API/Route/Admin/: Item.hs
muridae/muridae-db/Muridae/: DB.hs
muridae/muridae-db/Muridae/DB/: Item.hs  ItemListing.hs  TradableItem.hs
muridae/muridae-json/Hasql/: Pool.hs
muridae/muridae-json/Muridae/: JSON.hs
muridae/muridae-json/Muridae/JSON/: DbError.hs  Item.hs  ItemListing.hs  PooledListing.hs  User.hs
muridae/muridae-json/Muridae/JSON/Item/: Id.hs  Types.hs
muridae/muridae-json/Muridae/JSON/ItemListing/: Types.hs
muridae/muridae-json/Muridae/JSON/PooledListing/: Types.hs
muridae/muridae-server/: Main.hs
muridae/muridae/DB/: TradableItem.hs  TradableItemListing.hs  TradableItemListings.hs  Types.hs
muridae/muridae/Effectful/: Beam.hs
muridae/muridae/Muridae/: DB.hs  Environment.hs  Item.hs  ItemListing.hs  ItemTxn.hs  Listing.hs  User.hs
muridae/muridae/Muridae/DB/: TradableItem.hs  Types.hs
muridae/muridae/Muridae/Item/: Id.hs  Model.hs  Types.hs
muridae/muridae/Muridae/ItemListing/: Id.hs  Model.hs  Types.hs
muridae/muridae/Muridae/ItemTxn/: Model.hs  Types.hs
muridae/muridae/Muridae/Model/: TradableItem.hs  TradableItemListing.hs
muridae/muridae/Muridae/User/: Id.hs  Model.hs  Types.hs
muridae/muridae/MuridaeWeb/: Route.hs  Routes.hs  Server.hs  Types.hs
muridae/muridae/MuridaeWeb/Handler/: Item.hs  ItemListing.hs  User.hs
muridae/muridae/MuridaeWeb/Handler/Item/: Create.hs  Index.hs  Listing.hs  Types.hs
muridae/muridae/MuridaeWeb/Handler/Item/Listing/: Types.hs
muridae/muridae/MuridaeWeb/Handler/ItemListing/: Types.hs
muridae/muridae/MuridaeWeb/Handlers/Items/: Create.hs  Index.hs  Types.hs
muridae/muridae/MuridaeWeb/Handlers/Items/Listings/: Index.hs
muridae/muridae/MuridaeWeb/JSON/: DbError.hs  Item.hs  PooledListing.hs
muridae/muridae/MuridaeWeb/Route/: Item.hs  ItemListing.hs  ItemTxn.hs
muridae/muridae/MuridaeWeb/Route/Admin/: Item.hs
muridae/muridae/MuridaeWeb/Routes/: ItemListings.hs  Items.hs
muridae/muridae/MuridaeWeb/Routes/Admin/: Items.hs
muridae/test/MuridaeApi/: ItemTest.hs
projects/: index.html
proposals/: index.html
revert/: api__schema.sql  api_schema.sql  api_schema_permissions.sql  app__items.sql  app__listings.sql  app__schema.sql  app__transactions.sql  app__users.sql  app_schema_permissions.sql  auth__schema.sql  auth__sessions.sql  auth_schema.sql  auth_schema_permissions.sql  default_privileges.sql  extension__pgcrypto.sql  extension__pgtap.sql  items.sql  listings.sql  match_listings.sql  role_permissions.sql  roles.sql  session_permissions.sql  sessions.sql  transactions.sql  users.sql
search/: search_index.json
seeds/: items.csv  listings.csv  transactions.csv  users.csv
sql/: 20220222234200_create_items.sql  V20220301143724__create_role.sql  V20220307020011__create_listings_view.sql  sqitch.plan
src/: user.gleam
test/: test_helper.exs
verify/: api__schema.sql  api_schema_permissions.sql  app__items.sql  app__transactions.sql  app_schema.sql  auth__schema.sql  auth__sessions.sql  auth_schema_permissions.sql  default_privileges.sql  extension__citext.sql  match_listings.sql  pgcrypto.sql  role_permissions.sql  roles.sql  session_permissions.sql
(+187 files in other folders)
