[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["sekun <software@sekun.net>"]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/gnawex/gnawex"
readme = "README.md"

[workspace.dependencies]
gnawex = { path = "crates/gnawex", version = "0.1" }
gnawex_core = { path = "crates/gnawex_core", version = "0.1" }

## Postgres
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2", features = ["derive"] }
deadpool-postgres = { version = "0.10", features = ["serde"] }

## Serialization/Deserialization
serde = "1.0"

## Configuration
config = "0.13"

## Async
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

## Date/time stuff
chrono = { version = "0.4" }

## For less error boilerplate
thiserror = "1.0"

## CLI
clap = { version = "4.2", features = ["derive"] }

## Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
