[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["sekun <software@sekun.net>"]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/gnawex/gnawex"
readme = "README.md"

[workspace.dependencies]
# Internal crates

## Entry-point of the GNAWEX server
gnawex = { path = "crates/gnawex", version = "0.1" }

## Core logic
gnawex_core = { path = "crates/gnawex_core", version = "0.1" }

## HTML templates and components
gnawex_html = { path = "crates/gnawex_html", version = "0.1" }

## GNAWEX server
gnawex_server = { path = "crates/gnawex_server", version = "0.1" }

# External crates

## Database
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2", features = ["derive"] }
deadpool-postgres = { version = "0.10", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres"] }
deadpool-diesel = { version = "0.4", features = ["postgres"] }

## HTTP
hyper = { version = "0.14", features = ["full"] }
axum = { version = "0.6", features = [] }
axum-extra = { version = "0.7", features = [] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["fs"] }

## Serialization/Deserialization
serde = "1.0"

## Configuration
config = "0.13"

## Async
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
async-trait = { version = "0.1" }

## Date/time stuff
chrono = { version = "0.4" }

## For less error boilerplate
thiserror = "1.0"

## CLI
clap = { version = "4.2", features = ["derive"] }

## Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

## Templating
askama = { version = "0.12" }
askama_axum = { version = "0.3" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
