cabal-version:      3.0
name:               gnawex
version:            0.1.0.0
synopsis:           An independent marketplace for MouseHunt

-- A longer description of the package.
-- description:
homepage:           https://gnawex.com

-- A URL where users can report bugs.
-- bug-reports:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             SEKUN
maintainer:         sekun@hey.com

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable gnawex
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        gnawex

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite gnawex-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
