[package]
name = "gnawex"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
gnawex_core = { workspace = true }
gnawex_server = { workspace = true }
gnawex_html = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Temporary
askama = { workspace = true }
