[package]
name = "gnawex_core"
version = "0.1.0"
edition = "2021"

[dependencies]
gnawex_db = { workspace = true }

# Database & connection pooling
tokio-postgres = { workspace = true }
postgres-types = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres-rustls = { workspace = true }

# Serialization/deserialization
serde = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

# Date/time
chrono = { workspace = true }

# Error
thiserror = { workspace = true }
