[package]
name = "gnawex_db"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
# Database & connection pooling
tokio-postgres = { workspace = true }
postgres-types = { workspace = true }
deadpool-postgres = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Data types
## Date/time
chrono = { workspace = true }

## Serialization/deserialization
serde = { workspace = true }

## Error
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Configuration
config = { workspace = true }
