cabal-version:      3.0
name:               muridae
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports:        https://github.com/gnawex/gnawex
license:            AGPL-3.0-only
author:             SEKUN
maintainer:         software@sekun.net
extra-source-files: CHANGELOG.md

common common-default-language
  default-language: GHC2021

common common-base
  build-depends: base ^>=4.16

common common-database
  build-depends:

common common-deps
  build-depends:
    , text  ^>=2.0
    , time  ^>=1.11

common common-warnings
  ghc-options: -Wall -Werror

common common-extensions
  default-extensions:
    NoFieldSelectors
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    ExplicitNamespaces
    ImportQualifiedPost
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

library
  import:
    common-base
    , common-default-language
    , common-deps
    , common-warnings
    , common-extensions

  exposed-modules: MuridaeWeb.Server
  other-modules:
    DB
    DB.Types
    Effectful.Beam
    Muridae.Environment
    Muridae.Item
    Muridae.Item.Model
    Muridae.Item.Types
    Muridae.ItemListing
    Muridae.ItemListing.Model
    Muridae.ItemListing.Types
    Muridae.ItemTxn
    Muridae.ItemTxn.Model
    Muridae.ItemTxn.Types
    Muridae.User
    Muridae.User.Model
    Muridae.User.Types
    MuridaeWeb.Handler.Item
    MuridaeWeb.Handler.Item.Types
    MuridaeWeb.Handler.ItemListing
    MuridaeWeb.Handler.ItemListing.Types
    MuridaeWeb.Handler.User
    MuridaeWeb.Route
    MuridaeWeb.Route.Admin.Item
    MuridaeWeb.Route.Item
    MuridaeWeb.Route.ItemListing
    MuridaeWeb.Types

  build-depends:
    , aeson              ^>=2.1
    , beam-core          ^>=0.10
    , beam-postgres      ^>=0.5
    , bytestring         ^>=0.11
    , effectful          ^>=2.2
    , effectful-core     ^>=2.2
    , exceptions         ^>=0.10
    , mtl                ^>=2.2
    , postgresql-simple  ^>=0.6
    , resource-pool      ^>=0.3
    , servant            ^>=0.19
    , servant-effectful  ^>=0.0
    , servant-server     ^>=0.19
    , text-builder       ^>=0.6
    , unliftio           ^>=0.2
    , uuid-types         ^>=1.0
    , wai                ^>=3.2
    , warp               ^>=3.3

  hs-source-dirs:  muridae

executable muridae-server
  import:
    common-base
    , common-default-language
    , common-warnings
    , common-extensions

  main-is:        Main.hs
  build-depends:
    , muridae
    , wai      ^>=3.2
    , warp     ^>=3.3

  hs-source-dirs: muridae-server
