cabal-version:      3.0
name:               muridae
version:            0.1.0.0

bug-reports:        https://github.com/gnawex/gnawex
license:            AGPL-3.0-only
author:             SEKUN
maintainer:         software@sekun.net
extra-source-files: CHANGELOG.md

common common-default-language
  default-language: GHC2021

common common-base
  build-depends: base ^>=4.16

common common-deps
  build-depends:
    , scientific  ^>=0.3
    , text        ^>=2.0
    , time        ^>=1.11
    , vector      ^>=0.13

-- , text-builder  ^>=0.6
common common-warnings
  ghc-options: -Wall -Werror
  -- -Wunused-packages

common common-extensions
  default-extensions:
    NoFieldSelectors
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    ExplicitNamespaces
    ImportQualifiedPost
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    StrictData
    TypeFamilies

library
  import:
    common-base
    , common-default-language
    , common-deps
    , common-warnings
    , common-extensions

  exposed-modules:
    Muridae.Item
    Muridae.Item.Id
    Muridae.Item.Types
    Muridae.ItemListing
    Muridae.ItemListing.Id
    Muridae.ItemListing.Types
    Muridae.ItemTxn
    Muridae.ItemTxn.Types
    Muridae.User
    Muridae.User.Id
    Muridae.User.Types

  build-depends:
    , effectful-core  ^>=2.2
    , muridae-db

  hs-source-dirs:  muridae

library muridae-json
  import:
    common-base
    , common-default-language
    , common-deps
    , common-warnings
    , common-extensions

  exposed-modules:
    Muridae.JSON
    Muridae.JSON.DbError
    Muridae.JSON.Item
    Muridae.JSON.Item.Id
    Muridae.JSON.Item.Types
    Muridae.JSON.ItemListing
    Muridae.JSON.ItemListing.Types
    Muridae.JSON.PooledListing
    Muridae.JSON.PooledListing.Types
    Muridae.JSON.User

  build-depends:
    , aeson       ^>=2.1
    , muridae
    , muridae-db
    , servant     ^>=0.19

  -- Remove this after
  hs-source-dirs:  muridae-json

library muridae-db
  import:
    common-base
    , common-default-language
    , common-deps
    , common-warnings
    , common-extensions

  exposed-modules:
    Muridae.DB
    Muridae.DB.Item
    Muridae.DB.ItemListing

  build-depends:
    , effectful-core            ^>=2.2
    , hasql                     ^>=1.6
    , hasql-dynamic-statements  ^>=0.3
    , hasql-effectful           ^>=0.1
    , hasql-pool                ^>=0.8
    , hasql-th                  ^>=0.4
    , hasql-transaction         ^>=1.0
    , hasql-implicits           ^>=0.1
    , bytestring                ^>=0.11

  -- , effectful          ^>=2.2
  -- , exceptions         ^>=0.10
  hs-source-dirs:  muridae-db

library muridae-api
  import:
    common-base
    , common-default-language
    , common-warnings
    , common-extensions

  build-depends:
    , effectful-core     ^>=2.2
    , mtl                ^>=2.2
    , muridae
    , muridae-db
    , muridae-json
    , servant            ^>=0.19
    , servant-effectful  ^>=0.0
    , servant-server     ^>=0.19
    , text               ^>=2.0
    , vector             ^>=0.13
    , warp               ^>=3.3
    , wai-logger         ^>=2.4
    , world-peace        ^>=1.0

  -- , exceptions         ^>=0.10
  exposed-modules:
    Effectful.Servant
    Muridae.API.Handler.Item
    Muridae.API.Handler.ItemListing
    Muridae.API.Handler.User
    Muridae.API.QueryParam
    Muridae.API.Route
    Muridae.API.Route.Admin.Item
    Muridae.API.Route.Item
    Muridae.API.Route.ItemListing
    Muridae.API.Server
    Muridae.API.Types
    Muridae.Environment

  hs-source-dirs:  muridae-api

executable muridae-server
  import:
    common-base
    , common-default-language
    , common-warnings
    , common-extensions

  main-is:        Main.hs
  build-depends:  muridae-api
  hs-source-dirs: muridae-server

test-suite muridae-test
  import:
    common-base
    , common-default-language
    , common-deps
    , common-warnings
    , common-extensions

  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Driver.hs
  other-modules:      MuridaeApi.ItemTest

  -- Test dependencies
  build-depends:
    , hspec           ^>=2.10
    , tasty           ^>=1.4
    , tasty-discover  ^>=5.0
    , tasty-golden    ^>=2.3
    , tasty-hspec     ^>=1.2
    , tasty-hunit     ^>=0.10

  -- Stuff to test
  build-depends:

  build-tool-depends: tasty-discover:tasty-discover
